Fix repo (AOSP tool) missing

--- a/Orangefox_Builder.ipynb
+++ b/Orangefox_Builder.ipynb
@@ -24,6 +24,8 @@
       "outputs": [],
       "source": [
         "# @title #🛠️ 0. Prepare the environment\n",
+        "\n",
+        "# Fake github identity for sync and clone\n",
         "GITHUB_USERNAME = 'teto123'\n",
         "GITHUB_EMAIL = 'teto@teto.teto'\n",
         "\n",
@@ -48,6 +50,14 @@
         "def get_lunch_names(content):\n",
         "    lunch_names = re.findall(r'\\b(\\w+(?:_\\w+)*-(?:\\w+(?:-\\w+)*))\\b', content)\n",
         "    return lunch_names\n",
+        "\n",
+        "# --- Install repo ---\n",
+        "!sudo mkdir -p /usr/local/bin\n",
+        "!sudo curl -o /usr/local/bin/repo https://storage.googleapis.com/git-repo-downloads/repo\n",
+        "!sudo chmod a+x /usr/local/bin/repo\n",
+        "\n",
+        "# Verify\n",
+        "!repo --version\n",
         "\n",
         "# --- Setup Orangefox ---\n",
         "%cd ~\n",
@@ -92,14 +102,24 @@
         "%cd ~/OrangeFox_sync/sync/\n",
         "!yes | ./orangefox_sync.sh --branch {ORANGE_FOX_VERSION} --path {ORANGE_FOX_DIR}\n",
         "%cd {ORANGE_FOX_DIR}\n",
-        "!echo \"Sync done: {ORANGE_FOX_DIR}\""
+        "success(f\"Sync done: {ORANGE_FOX_DIR}\")"
       ],
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "cellView": "form",
-        "id": "8qBH2qanA_js"
+        "id": "8qBH2qanA_js",
+        "outputId": "52fd7807-214c-4283-9c4d-63889c59dad7"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": []
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -117,7 +137,7 @@
         "\n",
         "# @markdown ## 🗂️ GitHub Device Tree URL\n",
         "# @markdown URL of the device tree repository or file on GitHub.\n",
-        "GIT_DEVICE_TREE_URL = \"https://github.com/chunix64/android_device_tecno_TECNO-CK6n/blob/main/AndroidProducts.mk\"  # @param {type: \"string\"}\n",
+        "GIT_DEVICE_TREE_URL = \"https://github.com/chunix64/android_device_tecno_TECNO-CK6n/\"  # @param {type: \"string\"}\n",
         "\n",
         "#@markdown\n",
         "\n",
