Add list and download files

--- a/Orangefox_Builder.ipynb
+++ b/Orangefox_Builder.ipynb
@@ -105,21 +105,11 @@
         "success(f\"Sync done: {ORANGE_FOX_DIR}\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "cellView": "form",
-        "id": "8qBH2qanA_js",
-        "outputId": "52fd7807-214c-4283-9c4d-63889c59dad7"
+        "id": "8qBH2qanA_js"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": []
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -329,6 +319,72 @@
       "metadata": {
         "cellView": "form",
         "id": "CEtBup4iuOso"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---"
+      ],
+      "metadata": {
+        "id": "7CP_tg2CQI4p"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @title 📥 5. Find files and download\n",
+        "\n",
+        "# @markdown ## 🔍 Search File Types\n",
+        "# @markdown Enter the extensions you want to search for (separated by spaces).\n",
+        "# @markdown Example: `img tar zip`\n",
+        "DOWNLOAD_EXT = \"img tar zip cpio lz4 txt\"  # @param {type: \"string\"}\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "info(\"Get update in: https://github.com/chunix64/jupyter-orangefox-builder\")\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "import os\n",
+        "from google.colab import files\n",
+        "import ipywidgets as widgets\n",
+        "from IPython.display import display\n",
+        "\n",
+        "out_dir = os.path.join(ORANGE_FOX_DIR, \"out\")\n",
+        "\n",
+        "download_ext = DOWNLOAD_EXT.split(\" \")\n",
+        "download_ext = [\".\" + item for item in download_ext]\n",
+        "download_ext = tuple(download_ext)\n",
+        "\n",
+        "# Search all .img files under /out (recursive)\n",
+        "img_files = []\n",
+        "for root, dirs, filenames in os.walk(out_dir):\n",
+        "    for file in filenames:\n",
+        "        if file.endswith(download_ext):\n",
+        "            img_files.append(os.path.join(root, file))\n",
+        "\n",
+        "msg = widgets.HTML(\n",
+        "    value=\"<div style='font-size:24px;'>📥 Click to download: </div><br>\"\n",
+        ")\n",
+        "display(msg)\n",
+        "\n",
+        "def on_click(b):\n",
+        "    print(f\"You selected: {b.description}\")\n",
+        "    files.download(b.description)\n",
+        "\n",
+        "for f in img_files:\n",
+        "    button = widgets.Button(\n",
+        "        description=f,\n",
+        "        layout=widgets.Layout(width=\"auto\")\n",
+        "    )\n",
+        "    button.add_class(\"wrap-text\")\n",
+        "    button.on_click(on_click)\n",
+        "    display(button)"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "f4WJl8QvGHM5"
       },
       "execution_count": null,
       "outputs": []
