Add Kaggle version and optimize colab version (mka -j1)

--- a/orangefox-builder.ipynb
+++ b/orangefox-builder.ipynb
@@ -86,7 +86,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title #🔄 1. Sync OrangeFox sources and minimal manifest\n",
+        "# @title # 🔄 1. Sync OrangeFox sources and minimal manifest\n",
         "# @markdown > ⚠️ Android 14.1 needs more space than Colab has. It may fail.\n",
         "# @markdown\n",
         "# @markdown > 📝 You can build most Android 14 using 12.1 source. Just set SDK version to 31 or older in device.mk\n",
@@ -123,7 +123,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title 🌲 2. Add Device Tree to Source\n",
+        "# @title # 🌲 2. Add Device Tree to Source\n",
         "\n",
         "# @markdown ## 🗂️ GitHub Device Tree URL\n",
         "# @markdown URL of the device tree repository or file on GitHub.\n",
@@ -228,7 +228,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title 🤔 3. Check device trees avaible\n",
+        "# @title # 🤔 3. Check device trees avaible\n",
         "%cd {ORANGE_FOX_DIR}\n",
         "import os\n",
         "devices_dir = os.path.join(ORANGE_FOX_DIR, \"device\")\n",
@@ -282,7 +282,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title 🏗️ 4. Build OrangeFox\n",
+        "# @title # 🏗️ 4. Build OrangeFox\n",
         "# @markdown ## 💿 Recovery Partition\n",
         "# @markdown Choose the partition where the recovery ramdisk will be stored.\n",
         "RECOVERY_IMAGE = \"vendorbootimage\" #@param [\"vendorbootimage\", \"bootimage\", \"recoveryimage\"]\n",
@@ -310,7 +310,7 @@
         "build_cmd = f\"\"\"\n",
         "source {ORANGE_FOX_DIR}/build/envsetup.sh\n",
         "lunch {DEVICE_LUNCH_NAME}\n",
-        "mka adbd {RECOVERY_IMAGE}\n",
+        "mka -j1 adbd {RECOVERY_IMAGE}\n",
         "\"\"\"\n",
         "\n",
         "# Run in shell\n",
@@ -335,7 +335,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title 📥 5. Find files and download\n",
+        "# @title # 📥 5. Find files and download\n",
         "\n",
         "# @markdown ## 🔍 Search File Types\n",
         "# @markdown Enter the extensions you want to search for (separated by spaces).\n",
